# github_recent_trend_analysiz

./: .env.example  .gitignore  CLAUDE.md  EXTRACTED_WORKFLOW.md  README.md  github_recent_trend_analysis_project_proposal.md  package.json  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/workflows/: daily-refresh.yml  docs-guard.yml  python-tests.yml
.streamlit/: config.toml
dashboard/: app.py
data/processed/: _collection_progress.json  classification_validation_sample.csv  repo_languages.csv  repo_topics.csv  repos.csv  vibe_scores.csv  vibe_validation_sample.csv
docs/: CLAUDE.md  accessibility.md  architecture.md  conventions.md  data.md  decisions.md  dependencies.md  design-system.md  html-guidelines.md  index.md  presentation.md  project.md  release.md  security.md  testing-edge-cases.md  testing.md  ui.md
docs/adr/: 0000-template.md  0001-html-ui-documentation-boundary.md  0002-http-client-choice.md  0003-storage-layer-csv-first.md  0004-rule-based-classification.md
docs/memory/: current.md
outputs/: counterfactual.md  other_breakdown.md  report.md  summary_stats.md  vibe_coding_analysis.md
scripts/: bootstrap-context.mjs  docs-audit-frontmatter.mjs  docs-completed-regen.mjs  docs-guard-adr-status.mjs  docs-guard-links.mjs  docs-guard-placeholders.mjs  docs-guard-schema.mjs  docs-guard-size.mjs  docs-guard-task-status.mjs  docs-narrative-check.mjs  docs-new-session.mjs  docs-refresh.mjs  docs-sync.mjs  docs-utils.mjs
src/: __init__.py  analyze_counterfactual.py  analyze_other.py  analyze_vibe.py  build_charts.py  cache_manifest.py  classify.py  clean_data.py  collect_all.py  collect_languages.py  collect_repos.py  collect_topics.py  config.py  github_api.py  prepare_classification_validation.py  prepare_vibe_validation.py  visualize.py
tests/: test_cache_manifest.py  test_classify.py  test_clean_data.py  test_config.py
(+11 files in other folders)
